package com.lhf.designpatternlib.factory;

/**
 * Created by Joshua on 2020/3/28 20:52.
 */
public interface IProductA {
    void show();
}
