package com.lhf.designpatternlib.factory;

/**
 * Created by Joshua on 2020/3/28 20:53.
 */
public class ProductA1 implements IProductA {
    @Override
    public void show() {
        System.out.println("ProductA1.show() called");
    }
}
