package com.lhf.designpatternlib.factory;

/**
 * Created by Joshua on 2020/3/28 20:54.
 */
public class ProductA2 implements IProductA {
    @Override
    public void show() {
        System.out.println("ProductA2.show() called");
    }
}
