package com.lhf.designpatternlib.factory;

/**
 * Created by Joshua on 2020/3/28 20:53.
 */
public class ProductB1 implements IProductB {
    @Override
    public void show() {
        System.out.println("ProductB1.show() called");
    }
}
