package com.lhf.designpatternlib.factory;

/**
 * Created by Joshua on 2020/3/28 20:54.
 */
public class ProductB2 implements IProductB {
    @Override
    public void show() {
        System.out.println("ProductB2.show() called");
    }
}
